Fix visibility of theme-specific logos

--- a/vizro-core/src/vizro/static/css/layout.css
+++ b/vizro-core/src/vizro/static/css/layout.css
@@ -174,12 +174,16 @@ a:has(#logo-dark),
   display: none;
 }
 
+[data-bs-theme="dark"] a:has(#logo-dark),
 [data-bs-theme="dark"] #logo-dark {
-  display: inline;
+  display: flex;
+  align-items: center;
 }
 
+[data-bs-theme="light"] a:has(#logo-light),
 [data-bs-theme="light"] #logo-light {
-  display: inline;
+  display: flex;
+  align-items: center;
 }
 
 #collapse-icon.material-symbols-outlined {
